# VEX4EDK2

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  manifest.json  pyproject.toml  requirements.txt
docs/: edk2-checkout.md
releases/edk2-stable202405/: edk2.cdx.json  edk2.csaf.json
releases/edk2-stable202408/: edk2.cdx.json  edk2.csaf.json
releases/edk2-stable202411/: edk2.csaf.json
releases/edk2-stable202502/: edk2.csaf.json
releases/edk2-stable202505/: edk2.csaf.json
releases/edk2-stable202508/: edk2.csaf.json
releases/edk2-stable202511/: edk2.csaf.json
releases/edk2-stable202602/: edk2.csaf.json
sbom/: edk2-stable202411.cdx.json  edk2-stable202502.cdx.json  edk2-stable202505.cdx.json  edk2-stable202508.cdx.json  edk2-stable202511.cdx.json  edk2-stable202602.cdx.json
scripts/: batch_scan_releases.py  regen_and_compare_csaf.py
tests/: test_batch_smoke.py  test_csaf.py  test_edk2_checkout.py  test_releases.py  test_releases_outputs.py
tests/fixtures/: minimal.cdx.json
vex/: edk2-stable202405.csaf.json  edk2-stable202408.csaf.json  edk2-stable202411.csaf.json  edk2-stable202502.csaf.json  edk2-stable202505.csaf.json  edk2-stable202508.csaf.json  edk2-stable202511.csaf.json  edk2-stable202602.csaf.json
vex4edk2/: __init__.py  __main__.py  batch.py  csaf.py  edk2_checkout.py  releases.py
