[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "vex4edk2"
version = "0.1.0"
description = "Quarterly EDK II SBOM + CSAF VEX batch generator"
readme = "README.md"
license = "BSD-2-Clause"
authors = [
    { name = "Brian Mullen", email = "brian.desmond.mullen@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=3.0.1",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
    "requests>=2.32.0",
]

[project.scripts]
vex4edk2-batch = "vex4edk2.batch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vex4edk2*"]
